[update] btn cta

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://leonidasesteban.com/" target="_blank" rel="noopener noreferrer">
-                  See on the web
+                  See project
                 </a>
               </div>
             </div>
@@ -102,10 +102,10 @@
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://marvel-msx.netlify.app/" target="_blank" rel="noopener noreferrer">
-                  See on the web
+                  See project
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/marvel" target="_blank" rel="noopener noreferrer">
-                  See on GitHub
+                  See code
                 </a>
               </div>
             </div>
@@ -121,10 +121,10 @@
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://product-hunt-2c2a9.web.app/" target="_blank" rel="noopener noreferrer">
-                  See on the web
+                  See project
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/next-fake-product-hunt" target="_blank" rel="noopener noreferrer">
-                  See on GitHub
+                  See code
                 </a>
               </div>
             </div>
@@ -140,10 +140,10 @@
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://job-listing-challenge.netlify.app/" target="_blank" rel="noopener noreferrer">
-                  See on the web
+                  See project
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/job-listing-frontendmentor" target="_blank" rel="noopener noreferrer">
-                  See on GitHub
+                  See code
                 </a>
               </div>
             </div>
