[add] open graph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <meta property="og:title" content="¡Hi! I'm Miguel Segura" key="title" />
+  <meta name="description" content="I'm a Web Developer who loves to get involve in creative and challenging projects, I love to learn new things and be very agile. I also take the initiative to resolve my problems and take the oportunities to the next level." />
+  <meta property="og:description" content="I'm a Web Developer who loves to get involve in creative and challenging projects, I love to learn new things and be very agile. I also take the initiative to resolve my problems and take the oportunities to the next level." key="description" />
+  <meta property="og:url" content="https://portfolio-miguelseguramx.vercel.app/" key="url" />
+  <meta property="og:image" content="/static/images/miguelseguramx.jpg" key="image" />
+  <meta property="og:type" content="website" />
 </head>
 <body>
   <header>
