--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="tools-container">
           <h3>Principal Technologies</h3>
           <p class="tools-content">
-            Next.js, Html, Css, JavaScript, Python, Django, Redux, React Query, Cypress, Jest, PyTest, PostgreSQL, Three.js, Node.js
+            React.js, JavaScript, Python, Django, Redux, Testing, PostgreSQL, Three.js, Node.js, Docker, AWS
           </p>
         </div>
       </div>
