--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="tools-container">
           <h3>Principal Technologies</h3>
           <p class="tools-content">
-            React.js, JavaScript, Python, Django, Redux, Testing, PostgreSQL, Three.js, Node.js, Docker, AWS
+            React.js, JavaScript, Python, Django, Redux, Testing, PostgreSQL, Three.js, Node.js, Docker, AWS, Figma
           </p>
         </div>
       </div>
