add spanish page

--- a/es.html
+++ b/es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  <meta property="og:title" content="¡Hi! I'm Miguel Segura" key="title" />
-  <meta name="description" content="I'm a Web Developer who loves to get involve in creative and challenging projects, I love to learn new things and be very agile. I also take the initiative to resolve my problems and take the oportunities to the next level." />
-  <meta property="og:description" content="I'm a Web Developer who loves to get involve in creative and challenging projects, I love to learn new things and be very agile. I also take the initiative to resolve my problems and take the oportunities to the next level." key="description" />
+  <meta property="og:title" content="¡Hola! Soy Miguel Segura" key="title" />
+  <meta name="description" content="Soy un Desarrollador Web que ama involucrarse en proyectos creativos y desafiantes. Me encanta aprender cosas nuevas y ser muy ágil. También tomo la iniciativa para resolver mis problemas y llevar las oportunidades al siguiente nivel." />
+  <meta property="og:description" content="Soy un Desarrollador Web que ama involucrarse en proyectos creativos y desafiantes. Me encanta aprender cosas nuevas y ser muy ágil. También tomo la iniciativa para resolver mis problemas y llevar las oportunidades al siguiente nivel." key="description" />
   <meta property="og:url" content="https://portfolio-miguelseguramx.vercel.app/" key="url" />
   <meta property="og:image" content="/static/images/miguelseguramx.jpg" key="image" />
   <meta property="og:type" content="website" />
@@ -23,24 +23,24 @@
         <a href="#about" class="msx">Miguel Segura MX</a>
         <input class="checkbox" type="checkbox" id="toogle-button" name="active" />
         <label for="toogle-button" class="toogle-button">
-          <img class="open" src="/static/images/menu.svg" alt="Icono de menu" />
+          <img class="open" src="/static/images/menu.svg" alt="Icono de menú" />
           <img class="close" src="/static/images/close.svg" alt="Icono de cierre" />
         </label>
         <nav class="menu-container">
           <ul class="menu">
             <li>
               <a class="menu-item" href="#projects">
-                Projects
+                Proyectos
               </a>
             </li>
             <li>
               <a class="menu-item" href="#skills">
-                Skills
+                Habilidades
               </a>
             </li>
             <li>
               <a class="menu-item" href="#contact">
-                Contact Me
+                Contáctame
               </a>
             </li>
           </ul>
@@ -54,14 +54,14 @@
       <div class="about-container">
         <img class="about-img" src="/static/images/miguelseguramx.jpg" alt="Miguel Segura">
         <div class="about-content">
-          <h1 id="presentation">¡Hi! 👋🏼 I'm Miguel Segura, FullStack Developer</h1>
+          <h1 id="presentation">¡Hola! 👋🏼 Soy Miguel Segura, Desarrollador FullStack</h1>
           <p class="about-description">
-            I'm a Web Developer who loves to get involve in creative and challenging projects, I love to learn new things and be very agile. I also take the initiative to resolve my problems and take the oportunities to the next level.
+            Soy un Desarrollador Web que ama involucrarse en proyectos creativos y desafiantes. Me encanta aprender cosas nuevas y ser muy ágil. También tomo la iniciativa para resolver mis problemas y llevar las oportunidades al siguiente nivel.
             <br />
             <br />
-            Likewise, I think that I reflect a lot in my work the values and what I have learned as a Hiker, Dancer, and Bodybuilder.
+            Asimismo, creo que reflejo mucho en mi trabajo los valores y lo que he aprendido como Excursionista, Bailarín y Culturista.
           </p>
-          <a href="/static/files/miguel-segura-cv-en.pdf" download class="btn cv">Dowload Curriculum</a>
+          <a href="/static/files/miguel-segura-cv-es.pdf" download class="btn cv">Descargar Curriculum</a>
         </div>
       </div>
     </div>
@@ -70,36 +70,36 @@
   <section id="projects" class="projects" aria-labelledby="projects-title">
     <div class="u-wrapper">
       <div class="container">
-        <h2 id="projects-title">Projects and Experience</h2>
+        <h2 id="projects-title">Proyectos y Experiencia</h2>
         <ul class="project-list">
           <li class="project-item">
             <div>
               <h3>Genemod</h3>
               <ul class="project-details-list">
                 <li>
-                  Developed a text editor that achieved a 5x increase in speed.
+                  Desarrollé un editor de texto que logró un aumento de velocidad de 5 veces.
                 </li>
                 <li>
-                  Optimized a REST API, reducing latency across all endpoints to under 200 milliseconds.
+                  Optimizé una API REST, reduciendo la latencia en todos los endpoints a menos de 200 milisegundos.
                 </li>
                 <li>
-                  Designed, led, and implemented various software projects.
+                  Diseñé, dirigí e implementé varios proyectos de software.
                 </li>
                 <li>
-                  Implemented CI/CD pipelines using multiple AWS tools.
+                  Implementé pipelines de CI/CD utilizando múltiples herramientas de AWS.
                 </li>
                 <li>
-                  Established best practices and development processes, reducing QA bug tickets by 40%.
+                  Establecí mejores prácticas y procesos de desarrollo, reduciendo los tickets de errores de QA en un 40%.
                 </li>
               </ul>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://genemod.net/" target="_blank" rel="noopener noreferrer">
-                  See project
+                  Ver proyecto
                 </a>
               </div>
             </div>
             <div>
-              <img width="640" width="364" src="./static/images/genemod.png" alt="Plan de Estudios de LeonidasEsteban.com" />
+              <img width="640" height="364" src="./static/images/genemod.png" alt="Genemod" />
             </div>
           </li>
           <li class="project-item">
@@ -107,68 +107,68 @@
               <h3>LeonidasEsteban.com</h3>
               <ul class="project-details-list">
                 <li>
-                  Participate in the design, implementation and launch of 4 different products.
+                  Participé en el diseño, implementación y lanzamiento de 4 productos diferentes.
                 </li>
                 <li>
-                  I proposed and implemented new sales strategies, our income increased +75% thanks to them.
+                  Propuse e implementé nuevas estrategias de ventas, nuestros ingresos aumentaron un +75% gracias a ellas.
                 </li>
                 <li>
-                  Design, implementation and optimization of a REST API. Latency decreased up to 40%.
+                  Diseño, implementación y optimización de una API REST. La latencia disminuyó hasta un 40%.
                 </li>
                 <li>
-                  Maintenance of services in AWS. We managed to reduce costs by up to 30%.
+                  Mantenimiento de servicios en AWS. Logramos reducir los costos hasta en un 30%.
                 </li>
                 <li>
-                  Implementation of Pixel Perfect designs using React
+                  Implementación de diseños Pixel Perfect usando React.
                 </li>
                 <li>
-                  I learned and created animations and resources with Blender and Three.js. I started creating resources that took 4 seconds and managed to improve them until they loaded in 300 milliseconds
+                  Aprendí y creé animaciones y recursos con Blender y Three.js. Comencé creando recursos que tardaban 4 segundos y logré mejorarlos hasta que cargaran en 300 milisegundos.
                 </li>
               </ul>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://leonidasesteban.com/" target="_blank" rel="noopener noreferrer">
-                  See project
+                  Ver proyecto
                 </a>
               </div>
             </div>
             <div>
-              <img width="640" width="364" src="./static/images/plan-de-estudios.webp" alt="Plan de Estudios de LeonidasEsteban.com" />
+              <img width="640" height="364" src="./static/images/plan-de-estudios.webp" alt="Plan de Estudios de LeonidasEsteban.com" />
             </div>
           </li>
           <li class="project-item">
             <div>
               <h3>Marvel Clone</h3>
               <p>
-                With this project I met Leonidas Esteban, I did it as part of his Patreon program, it was my first project from scratch planning step by step.
+                Con este proyecto conocí a Leonidas Esteban, lo hice como parte de su programa en Patreon, fue mi primer proyecto desde cero planificando paso a paso.
               </p>
               <p>
-                I have many ways to refactor and improve the code of this project because I have learned a lot since creating it.
+                Tengo muchas formas de refactorizar y mejorar el código de este proyecto porque he aprendido mucho desde que lo creé.
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://marvel-msx.netlify.app/" target="_blank" rel="noopener noreferrer">
-                  See project
+                  Ver proyecto
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/marvel" target="_blank" rel="noopener noreferrer">
-                  See code
+                  Ver código
                 </a>
               </div>
             </div>
             <div>
-              <img width="640" height="364" src="/static/images/marvel.png" alt="Pagina principal de marvel" />
+              <img width="640" height="364" src="/static/images/marvel.png" alt="Página principal de Marvel" />
             </div>
           </li>
           <li class="project-item">
             <div>
               <h3>Next Product Hunt</h3>
               <p>
-                A Full Stack project where I create a copy of Product Hunt, to register and evaluate products, you can create an account to get started and register your own product.
+                Un proyecto Full Stack donde creo una copia de Product Hunt, para registrar y evaluar productos, puedes crear una cuenta para empezar y registrar tu propio producto.
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://product-hunt-2c2a9.web.app/" target="_blank" rel="noopener noreferrer">
-                  See project
+                  Ver proyecto
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/next-fake-product-hunt" target="_blank" rel="noopener noreferrer">
-                  See code
+                  Ver código
                 </a>
               </div>
             </div>
@@ -180,19 +180,19 @@
             <div>
               <h3>Job List</h3>
               <p>
-                A small project to list and filter job offers by requirements
+                Un pequeño proyecto para listar y filtrar ofertas de trabajo por requisitos.
               </p>
               <div class="projects-btns">
                 <a class="btn btn-fit" href="https://job-listing-challenge.netlify.app/" target="_blank" rel="noopener noreferrer">
-                  See project
+                  Ver proyecto
                 </a>
                 <a class="btn-transparent" href="https://github.com/miguelseguramx/job-listing-frontendmentor" target="_blank" rel="noopener noreferrer">
-                  See code
+                  Ver código
                 </a>
               </div>
             </div>
             <div>
-              <img width="640" height="364" src="/static/images/job-list.png" alt="Pantalla Principal de Product Hunt" />
+              <img width="640" height="364" src="/static/images/job-list.png" alt="Pantalla Principal de Job List" />
             </div>
           </li>
         </ul>
@@ -203,15 +203,15 @@
   <section id="skills" class="skills" aria-labelledby="skills-title">
     <div class="u-wrapper">
       <div class="container">
-        <h2 id="skills-title">Skills and Technologies</h2>
+        <h2 id="skills-title">Habilidades y Tecnologías</h2>
         <div class="tools-container">
-          <h3>Principal Skills</h3>
+          <h3>Habilidades Principales</h3>
           <p class="tools-content">
-            Teamwork, Agile Methodologies, Problem Solving, Quick Learning, Self-taught,
+            Trabajo en equipo, Metodologías Ágiles, Resolución de Problemas, Aprendizaje Rápido, Autodidacta,
           </p>
         </div>
         <div class="tools-container">
-          <h3>Principal Technologies</h3>
+          <h3>Tecnologías Principales</h3>
           <p class="tools-content">
             React.js, Python, Redux, Node.js, Django, Testing, PostgreSQL, Three.js, AWS, Docker, Figma
           </p>
@@ -224,9 +224,9 @@
     <div class="u-wrapper">
       <div class="container">
         <h2 id="contact-title">
-          ¿Do you want to work with me?
+          ¿Quieres trabajar conmigo?
           <br />
-          ¡Contact me!
+          ¡Contáctame!
           <a href="mailto:miguelseguramx@gmail.com" class="email">
             miguelseguramx@gmail.com
           </a>
@@ -260,7 +260,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright">Made with ❤ by Miguel Segura, © 2024</p>
+        <p class="copyright">Hecho con ❤ por Miguel Segura, © 2022</p>
       </div>
     </div>
   </footer>
